fixed title area alignment

--- a/sass/site-header/_title-area.scss
+++ b/sass/site-header/_title-area.scss
@@ -33,8 +33,7 @@
 }
 
 .header-full-width .title-area {
-	float: none;
-	width: 100%;
+	float: left;
 }
 
 .site-title {
